fixed filter overflow

--- a/src/components/serch-filter/styles.module.css
+++ b/src/components/serch-filter/styles.module.css
@@ -20,6 +20,9 @@
 }
 
 .menu {
+  max-height: 300px;
+  overflow: auto;
+
   & > li {
     padding: 0 !important;
   }
